fixxed alignment on shop__container

--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ nav {
   background-color: rgb(153, 255, 0);
   box-shadow: 0 3px 3px rgb(0 0 0 / 30%);
   position: relative;
-  left: 62%;
+  left: 62.125%;
   top: -44px;
   transition: all 300ms ease;
   cursor: pointer;
